# cobaju

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md
apps/backend/: README.md  alembic.ini  moon.yml  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/alembic/versions/: 20260714_0001_initial_schema.py  20260715_0002_create_users.py  20260715_0003_create_clothing_items.py  20260715_0004_add_original_image_path.py  20260715_0005_add_analysis_completed.py  20260716_0006_create_recommendations.py  20260721_0007_add_temporary_upload_marker.py
apps/backend/app/: __init__.py  celery_app.py  database.py  dependencies.py  main.py  mcp_server.py  observability.py
apps/backend/app/core/: config.py  mcp_identity.py  security.py
apps/backend/app/models/: __init__.py  clothing_item.py  recommendation.py  user.py
apps/backend/app/routers/: auth.py  chat.py  health.py  recommendations.py  wardrobe.py
apps/backend/app/schemas/: __init__.py  auth.py  chat.py  mcp.py  recommendation.py  wardrobe.py
apps/backend/app/services/: chat.py  chat_guardrails.py  clothing_analysis.py  embeddings.py  image_uploads.py  mcp_client.py  openrouter.py  outfit_evaluator.py  recommendations.py  style_critic.py  stylist_agent.py  users.py  vector_store.py  wardrobe.py  (+1 more)
apps/backend/tests/: conftest.py  test_auth.py  test_chat.py  test_clothing_analysis.py  test_config.py  test_evaluation.py  test_health.py  test_mcp.py  test_observability.py  test_recommendation_history.py  test_retrieval.py  test_stylist_reliability.py  test_uploads.py  test_wardrobe.py
(+32 files in other folders)
