[project]
name = "cobaju-backend"
version = "0.1.0"
description = "Cobaju FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15,<2.0",
    "celery[redis]>=5.5,<6.0",
    "chromadb>=1.0,<2.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "langfuse>=3.0,<5.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "pydantic-settings>=2.8,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "pyjwt>=2.10,<3.0",
    "sqlmodel>=0.0.24,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
